<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">


<EditTextPreference android:persistent="true" android:key="@string/pref_num_intervals_key" android:title="@string/pref_num_intervals_title" android:summary="@string/pref_num_intervals_summary" android:numeric="decimal" android:inputType="number" android:defaultValue="@string/pref_num_intervals_default" /><EditTextPreference android:persistent="true" android:key="@string/pref_interval_length_key" android:title="@string/pref_interval_length_title" android:summary="@string/pref_interval_length_summary" android:numeric="decimal" android:inputType="number" android:defaultValue="@string/pref_interval_length_default" /><EditTextPreference android:persistent="true" android:key="@string/pref_countdown_key" android:title="@string/pref_countdown_title" android:summary="@string/pref_countdown_summary" android:numeric="decimal" android:inputType="number" android:defaultValue="@string/pref_countdown_default" />





<RingtonePreference android:defaultValue="content://settings/system/notification_sound" android:showDefault="true" android:title="@string/pref_ringtone_title" android:showSilent="true" android:summary="@string/pref_ringtone_summary" android:key="@string/pref_ringtone_key" android:persistent="true" android:ringtoneType="notification|alarm"></RingtonePreference>


<CheckBoxPreference android:title="@string/pref_nolock_title" android:summary="@string/pref_nolock_summary" android:key="@string/pref_nolock_key"></CheckBoxPreference>

</PreferenceScreen>
