<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/main_view">

    <TextView
        android:id="@+id/interval_timer_title"
        android:layout_width="fill_parent"
        android:textScaleX="2"
        android:layout_height="wrap_content"/>

    <view
        class="com.xomzom.androidstuff.timerapp.ChronoTextView"
        android:id="@+id/time_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:textColor="#8080ff"
        android:background="#000000"
        android:layout_weight="1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/interval_timer_state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_ready"
        android:layout_centerHorizontal="true"
        android:textScaleX="3"
        android:textColor="#ff8080"
        android:background="#000000"
        />
    <LinearLayout
     android:orientation="horizontal"
     android:id="@+id/button_view"
     android:gravity="right"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     >
     
    <Button
        android:id="@+id/resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/menu_resume_title"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_alignRight="@id/resume_button"
        android:layout_alignParentBottom="true"
        android:text="@string/menu_pause_title"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_alignRight="@id/pause_button"
        android:layout_alignParentBottom="true"
        android:text="@string/menu_stop_title"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_alignRight="@id/pause_button"
        android:layout_alignParentBottom="true"
        android:text="@string/menu_start_title"
        android:visibility="visible"
        />
    </LinearLayout>


</LinearLayout>